<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Views.DetailActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/original_title"
        android:layout_width="230dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/original_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="172dp"
        android:layout_height="198dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/original_title" />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="100dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/original_title" />

    <TextView
        android:id="@+id/vote_average"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/vote_average"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/release_date" />

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="20dp"
        android:text="@string/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnail" />

    <ImageButton
        android:id="@+id/watch_trailer"
        android:layout_width="93dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/youtube"
        android:contentDescription="@string/image_view_conten"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vote_average"
        app:layout_constraintVertical_bias="0.263" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/show_review"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        app:layout_constraintEnd_toStartOf="@+id/watch_trailer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/thumbnail"
        app:layout_constraintTop_toBottomOf="@+id/vote_average"
        app:layout_constraintVertical_bias="0.217" />

    <CheckBox
        android:id="@+id/favoritestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:button="@drawable/favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/original_title"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="SaveFavorite"/>


</android.support.constraint.ConstraintLayout>
</ScrollView>
</layout>